// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sentry processor listener as processor 1`] = `
Array [
  Object {
    "data": Object {
      "err": Object {
        "message": "Oops kaboom",
        "name": "Error",
        "stack": "Error: Oops kaboom
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:92:18)",
      },
    },
    "err": [Error: Oops kaboom],
    "level": 50,
    "msg": "Oops kaboom",
    "time": 2009-02-13T23:31:30.000Z,
  },
]
`;

exports[`Sentry processor listener as processor 2`] = `
Array [
  Array [
    [Error: Oops kaboom],
    Object {
      "level": "error",
      "tags": Object {
        "admin": true,
      },
      "user": Object {
        "id": "1234",
      },
    },
  ],
]
`;

exports[`Sentry processor listener attach 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:108:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:109:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:110:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:116:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:117:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/logger/__tests__/sentry.test.ts:118:18)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Sentry processor listener one shot 1`] = `
Array [
  Array [
    [Error: Oh its a fake error],
    Object {
      "level": "error",
      "tags": Object {
        "admin": true,
      },
      "user": Object {
        "id": "1234",
      },
    },
  ],
]
`;

exports[`Sentry processor listener one shot 2`] = `
Array [
  Array [
    Object {
      "level": "info",
      "message": "This happened before the error",
      "timestamp": 1234567890000,
    },
  ],
]
`;
